# extended-gaussian

src/core/view/: FPSCamera.hpp  InteractiveCameraHandler.hpp
src/projects/extended_gaussian/apps/extended_gaussianViewer/: CMakeLists.txt  main.cpp
src/projects/extended_gaussian/renderer/: CMakeLists.txt  ExtendedGaussianViewer.cpp  ExtendedGaussianViewer.hpp
src/projects/extended_gaussian/renderer/resource/: AssetLoadWorker.cpp  AssetLoadWorker.hpp  GaussianField.hpp  GaussianLoader.cpp  GaussianLoader.hpp  GaussianSet.cpp  GaussianSet.hpp  ManifestStore.cpp  ManifestStore.hpp  ResourceManager.cpp  ResourceManager.hpp
src/projects/extended_gaussian/renderer/scene/: GaussianInstance.cpp  GaussianInstance.hpp  GaussianScene.cpp  GaussianScene.hpp
src/projects/extended_gaussian/renderer/subsystem/: Subsystem.hpp
src/projects/extended_gaussian/renderer/subsystem/rendering_system/: RenderUtils.hpp  RenderingSystem.cpp  RenderingSystem.hpp
src/projects/extended_gaussian/renderer/subsystem/rendering_system/gpu_resource_manager/: GPUGaussianField.cpp  GPUGaussianField.hpp  GPUResourceManager.cpp  GPUResourceManager.hpp
